# terminal-flow

./: .gitignore  LICENSE  README.md  pyproject.toml
terminal_flow/: __init__.py  __main__.py  animation_base.py  constants.py  curses_main.py  main.py  main_curses.py
terminal_flow/colors/: __init__.py  animator.py  config.py  curses_adapter.py  generator.py  schemes.py
terminal_flow/modes/: __init__.py  flux.py  morph.py  pulse.py  spin.py  wave.py
terminal_flow/text/: __init__.py  arch2.txt  bubbles.txt  galaxy.txt  heart.txt  loader.py  nyan.txt  pacman.txt  pusheen.txt  rose.txt  spin.txt  spiral.txt
