[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-flow"
version = "0.1.0"
description = "A colorful terminal user interface application that displays ASCII text files with dynamic rainbow animations"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "kestalkayden", email = "kestalkayden@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Artistic Software",
    "Topic :: Terminals",
    "Topic :: Multimedia :: Graphics",
]
keywords = ["terminal", "tui", "ascii-art", "animation", "colors", "rainbow"]
requires-python = ">=3.8"
dependencies = [
    # Zero external dependencies - pure Python standard library
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/kestalkayden/terminal-flow"
Repository = "https://github.com/kestalkayden/terminal-flow"
Issues = "https://github.com/kestalkayden/terminal-flow/issues"

[project.scripts]
terminal-flow = "terminal_flow.curses_main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["terminal_flow*"]

[tool.setuptools.package-data]
terminal_flow = ["text/*.txt"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "T20"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=terminal_flow --cov-report=term-missing"